update to show products asc. by price

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 #spring.datasource.url=jdbc:mysql://localhost:3306/easyshop
 #spring.datasource.name=easyshop
 #spring.datasource.username=root
-#spring.datasource.password=P@ssw0rd
+#spring.datasource.password=Japan97Korea
 
 datasource.url=jdbc:mysql://localhost:3306/easyshop
 datasource.username=root
